refactor: abstract factory for validators and processors